--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -184,6 +184,7 @@ $btn-box-shadow:                    inset 0 1px 0 rgba($white, .15), 0 1px 1px r
 $btn-disabled-opacity:              .65 !default;
 $btn-link-disabled-color:           $gray-600 !default;
 $btn-transition:                    color .15s $ease-in-out, background-color .15s $ease-in-out, border-color .15s $ease-in-out, box-shadow .15s $ease-in-out !default;
+$btn-loading-size:                  15px !default;
 
 // Scrollbar
 //
