--- a/src/form/style.scss
+++ b/src/form/style.scss
@@ -8,31 +8,33 @@ $form-prefix: 'dk-form';
   @include reset-component();
 
   &-item {
+    display: flex;
     margin-bottom: $form-margin-y;
-    @include clearfix();
+
+    &-top {
+      flex-direction: column;
+    }
 
     &-content {
       position: relative;
     }
 
     &-label {
-      // display: flex;
-      float: left;
+      display: flex;
+      width: 100px;
       height: $form-label-height;
       padding: $form-label-padding-y $form-label-padding-x $form-label-padding-y 0;
-      // text-align: right;
       line-height: 1;
       vertical-align: middle;
-      // justify-content: flex-end;
-      // align-items: center;
+      align-items: center;
     }
 
     &-label-right {
-      text-align: right;
+      justify-content: flex-end;
     }
 
     &-label-left {
-      text-align: left;
+      justify-content: flex-start;
     }
 
     &-label-top {
